[package]
name = "oxidizer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lzxd = "0.1.4"
bytes = "1.1.0"
image = "0.23.14"
indicatif = {version = "0.16.2", features = ["improved_unicode"] }
console = "0.15.0"
thiserror = "1.0.30"